pre-class commit. done with part 1 (I believe) but having a problem with starting the application up.

--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 
 <body class="container">
@@ -19,6 +19,8 @@
     </tr>
     </ul>
 </table>
+
+<a href="/category/add">Add Category</a>
 
 </body>
 </html>
