--- a/src/main/resources/templates/category/add.html
+++ b/src/main/resources/templates/category/add.html
@@ -9,7 +9,7 @@
 <form method="post" style="max-width:600px;" th:object="${category}">
     <div class="form-group">
         <label th:for="category">Category</label>
-        <input class="form-control" th:field="*{category}" />
+        <input class="form-control" th:field="*{name}" />
         <span th:errors="*{name}" class="error"></span>
     </div>
 </form>
