--- a/src/main/resources/templates/menu/index.html
+++ b/src/main/resources/templates/menu/index.html
@@ -8,7 +8,7 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-    <p th:unless="${menu} and ${menu.size()}">No menu items!</p>
+    <p th:unless="${menu} and ${menu.size()}">No menus!</p>
 
     <ul>
         <tr th:each="item : ${menu}">
