--- a/src/main/resources/templates/menu/add-item.html
+++ b/src/main/resources/templates/menu/add-item.html
@@ -6,17 +6,17 @@
 
         <nav th:replace="fragments :: navigation"></nav>
 
-        <form method="post" action="add-item" style="max-width:600px;" th:object="${form}">
+        <form method="post" th:object="${form}" action="/menu/add-item">
             <div class="form-group">
-                <label th:for="menu">Menu</label>
-                <select th:field="*{cheeseId}" name="cheeseId">
-                    <option th:each="cheese : ${cheeses}"
+                <label th:for="cheeseId">Cheese</label>
+                <select name="cheeseId">
+                    <option th:each="cheese : *{cheeses}"
                             th:text="${cheese.name}"
                             th:value="${cheese.id}"></option>
                 </select>
-                <input type="hidden" name="menuId" th:value="*{menu.id}" />
-                <span th:errors="*{name}" class="error"></span>
+              <!--  <span th:errors="*{name}" class="error"></span> -->
             </div>
+            <input type="hidden" name="menuId" th:value="*{menu.id}" />
             <input type="submit" value="Add Cheese" />
         </form>
 
