--- a/src/main/resources/templates/menu/add.html
+++ b/src/main/resources/templates/menu/add.html
@@ -8,10 +8,12 @@
 
         <form method="post" style="max-width:600px;" th:object="${menu}">
             <div class="form-group">
-                <label th:for="menu">Menu</label>
+                <label th:for="name">Name</label>
                 <input class="form-control" th:field="*{name}" />
                 <span th:errors="*{name}" class="error"></span>
             </div>
+
+            <input type="submit" value="Create Menu" />
         </form>
 
 </body>
