--- a/src/main/resources/templates/menu/index.html
+++ b/src/main/resources/templates/menu/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-
 <body class="container">
-
 <h1 th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
 
-    <p th:unless="${menu} and ${menu.size()}">No menus!</p>
-
     <ul>
-        <tr th:each="item : ${menu}">
-            <li>
-                <!-- TODO: Link to the appropriate menu from this page. -->
-                <a href = "/menu/view/1"><td th:text="${item.name}"></td></a>
-            </li>
-        </tr>
+    <tr th:each="menu : ${menus}">
+        <li>
+        <a th:href="'/menu/view/' + ${menu.id}" th:text="${menu.name}"></a>
+        </li>
+    </tr>
     </ul>
 
-    <a href="/menu/add">Add Menu</a>
+<p><a href="/menu/add">Add Menu</a></p>
 
 </body>
 </html>
