--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -7,14 +7,12 @@
         <nav th:replace="fragments :: navigation"></nav>
 
         <ul>
-            <tr th:each="cheese : ${menu.cheeses}">
-                <li>
-                    <td th:text="${cheese.name}"></td>
-                </li>
-            </tr>
+            <li th:each="cheese : ${cheeses}" th:text="${cheese.name}"></li>
         </ul>
 
-        <p><a th:href="'/menu/add-item/' + ${menu.id}">Add Cheese</a></p>
+        <p th:unless="${cheeses.size()}"><i>No cheeses yet</i></p>
+
+        <p><a th:href="'/menu/add-item/' + ${menuId}">Add Cheese</a></p>
 
 </body>
 </html>
